--- a/index.html
+++ b/index.html
@@ -1,14 +1,154 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>reservia</title>
 </head>
+
 <body>
     <div>
-        <h1>OC projet 2</h1>
+        <header>
+            <nav>
+                <div>
+                    <img src="images/logo/Reservia.svg">
+                    <ul>
+                        <li>Hébergements</li>
+                        <li>Activités</li>
+                        <li>S'inscrire</li>
+                    </ul>
+                </div>
+            </nav>
+
+            <div>
+                <h2>Trouver votre hébergement pour des vacances de rêve</h2>
+                <p>En plein ville ou en pleine nature</p>
+                <form>
+                    <input type="text" id="searchBar" name="place" value="Marseille,France">
+                    <input type="submit" value="Rechercher">
+                </form>
+
+                <div>
+                    <p>Filtres</p>
+                    <ul>
+                        <li>Economique</li>
+                        <li>Familial</li>
+                        <li>Romantique</li>
+                        <li>Animaux autorisés</li>
+                    </ul>
+                </div>
+                <p>Plus de 500 logements sont disponibles dans cette ville</p>
+            </div>
+        </header>
+
+        <section>
+            <article>
+                <h3>Hébergements à Marseille</h3>
+                <div id="hotels">
+                    <div>
+                        <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                        <h4>Auberge la Cannebière</h4>
+                        <p>Nuit à partir de <b>25€</b></p>
+                    </div>
+                    <div>
+                        <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                        <h4>Hôtel du port</h4>
+                        <p>Nuit à partir de <b>52€</b></p>
+                    </div>
+                    <div>
+                        <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                        <h4>Hôtel Les mouettes</h4>
+                        <p>Nuit à partir de <b>76€</b></p>
+                    </div>
+                    <div>
+                        <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                        <h4>Hôtel de la mer</h4>
+                        <p>Nuit à partir de <b>46€</b></p>
+                    </div>
+                    <div>
+                        <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                        <h4>Auberge Le Panier</h4>
+                        <p>Nuit à partir de <b>23€</b></p>
+                    </div>
+                    <div>
+                        <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                        <h4>Hôtel chez Amina</h4>
+                        <p>Nuit à partir de <b>96€</b></p>
+                    </div>
+                </div>
+                <h4>Afficher plus</h4>
+            </article>
+
+            <aside>
+                <h3>Les plus populaires</h3>
+                <div>
+                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                    <h4>Hôtel Le soleil du matin</h4>
+                    <p>Nuit à partir de <b>128€</b></p>
+                </div>
+                <div>
+                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                    <h4>Au coeur de l'eau</h4>
+                    <p>Nuit à partir de <b>71€</b></p>
+                </div>
+                <div>
+                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+                    <h4>Hôtel Tout bleu et Blanc</h4>
+                    <p>Nuit à partir de <b>68€</b></p>
+                </div>
+            </aside>
+        </section>
+
+        <section>
+            <h3>Acitivités à Marseille</h3>
+            <div>
+                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+                <p>Vieux Port</p>
+            </div>
+            <div>
+                <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+                <p>Fort de Pomègues</p>
+            </div>
+            <div>
+                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
+                <p>Iles du Friout</p>
+            </div>
+            <div>
+                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+                <p>Parc National des Calanques</p>
+            </div>
+            <div>
+                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+                <p>Notre-Dame-de-la-Garde</p>
+            </div>
+            <div>
+                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
+                <p>Parc Longchamp</p>
+            </div>
+        </section>
+
+        <footer>
+            <div>
+                <h4>A propos</h4>
+                <p>Fonctionnement du site</p>
+                <p>Conditions générales de vente</p>
+                <p>Données et confidentialité</p>
+            </div>
+            <div>
+                <h4>Nos hébergements</h4>
+                <p>Charte qualité</p>
+                <p>Soumettre votre hotel</p>
+            </div>
+            <div>
+                <h4>Assistance</h4>
+                <p>Centre d'aide</p>
+                <p>Nous contacter</p>
+            </div>
+        </footer>
     </div>
 </body>
+
 </html>
