--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <title>reservia</title>
 </head>
 
 <body>
-    <div>
+    <div id="blocPage">
         <header>
-            <nav>
-                <div>
-                    <img src="images/logo/Reservia.svg">
+
+            <div id="navigation">
+                <img src="images/logo/Reservia.svg">
+                <nav>
                     <ul>
                         <li>Hébergements</li>
                         <li>Activités</li>
                         <li>S'inscrire</li>
                     </ul>
-                </div>
-            </nav>
+                </nav>
+            </div>
+
 
             <div>
                 <h2>Trouver votre hébergement pour des vacances de rêve</h2>
