--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="blocPage">
         <header>
 
+            <!--L'entête avec logo Reservia + bar de navigation-->
             <div id="navigation">
                 <img src="images/logo/Reservia.svg">
                 <nav>
@@ -29,58 +30,162 @@
 
             <div>
                 <h2>Trouver votre hébergement pour des vacances de rêve</h2>
-                <p>En plein ville ou en pleine nature</p>
-                <form>
-                    <input type="text" id="searchBar" name="place" value="Marseille,France">
-                    <input type="submit" value="Rechercher">
-                </form>
+                <p>En plein centre ville ou en pleine nature</p>
 
-                <div>
+                <div id="formSubmitButton">
+                    <div id="mapMarker">
+                        <img src="/icons/map-marker-alt-solid.svg" alt="map marker">
+                    </div>
+                    <form>
+                        <input type="text" id="searchBar" name="place" value="Marseille,France">
+
+                    </form>
+
+                    <div id="searchButton">
+                        Rechercher
+                    </div>
+                </div>
+
+
+                <div id="listFiltre">
                     <p>Filtres</p>
                     <ul>
-                        <li>Economique</li>
-                        <li>Familial</li>
-                        <li>Romantique</li>
-                        <li>Animaux autorisés</li>
+                        <li>
+                            <div class="filtre">
+                                <div class="icons">
+                                    <img src="/icons/money-bill-wave-solid.svg" alt="">
+                                </div>
+                                <div class="filtreChoice">
+                                    Economique
+                                </div>
+
+                            </div>
+                        </li>
+
+
+                        <li>
+                            <div class="filtre">
+                                <div class="icons">
+                                    <img src="/icons/child-solid.svg" alt="">
+                                </div>
+                                <div class="filtreChoice">
+                                    Familial
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="filtre">
+                                <div class="icons">
+                                    <img src="/icons/heart-solid.svg" alt="">
+                                </div>
+                                <div class="filtreChoice">
+                                    Romantique
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="filtre">
+                                <div class="icons">
+                                    <img src="/icons/dog-solid.svg" alt="">
+                                </div>
+                                <div class="filtreChoice">
+                                    Animaux autorisés
+                                </div>
+
+                            </div>
+                        </li>
+
+
                     </ul>
                 </div>
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
+
         </header>
 
         <section>
             <article>
                 <h3>Hébergements à Marseille</h3>
-                <div id="hotels">
-                    <div>
+                <div id="listHotels">
+
+                    <div class="hotel">
                         <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                         <h4>Auberge la Cannebière</h4>
                         <p>Nuit à partir de <b>25€</b></p>
+                        <div class="stars">
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="emptyStar"></div>
+                        </div>
+
                     </div>
-                    <div>
+
+                    <div class="hotel">
                         <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                         <h4>Hôtel du port</h4>
                         <p>Nuit à partir de <b>52€</b></p>
+                        <div class="stars">
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="emptyStar"></div>
+                        </div>
                     </div>
-                    <div>
+
+                    <div class="hotel">
                         <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
                         <h4>Hôtel Les mouettes</h4>
                         <p>Nuit à partir de <b>76€</b></p>
+                        <div class="stars">
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="emptyStar"></div>
+                        </div>
                     </div>
-                    <div>
+                    <div class="hotel">
                         <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
                         <h4>Hôtel de la mer</h4>
                         <p>Nuit à partir de <b>46€</b></p>
+                        <div class="stars">
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="emptyStar"></div>
+                        </div>
                     </div>
-                    <div>
+                    <div class="hotel">
                         <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
                         <h4>Auberge Le Panier</h4>
                         <p>Nuit à partir de <b>23€</b></p>
+                        <div class="stars">
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="emptyStar"></div>
+                        </div>
                     </div>
-                    <div>
+                    <div class="hotel">
                         <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
                         <h4>Hôtel chez Amina</h4>
                         <p>Nuit à partir de <b>96€</b></p>
+                        <div class="stars">
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="blueStar"></div>
+                            <div class="emptyStar"></div>
+                        </div>
                     </div>
                 </div>
                 <h4>Afficher plus</h4>
