--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                         <img src="icons/money-bill-wave-solid.svg" alt="money bill icon">
                                     </div>
                                     <div class="filtreChoice">
-                                        Economique
+                                        <a href="#">Economique</a>
                                     </div>
 
                                 </div>
@@ -76,7 +76,7 @@
                                         <img src="icons/child-solid.svg" alt="child-solid icon">
                                     </div>
                                     <div class="filtreChoice">
-                                        Familial
+                                        <a href="#">Familial</a>
                                     </div>
 
                                 </div>
@@ -87,7 +87,7 @@
                                         <img src="icons/heart-solid.svg" alt="heart-solid icon">
                                     </div>
                                     <div class="filtreChoice">
-                                        Romantique
+                                        <a href="#">Romantique</a>
                                     </div>
 
                                 </div>
@@ -98,7 +98,8 @@
                                         <img src="icons/dog-solid.svg" alt="dog-solid icon">
                                     </div>
                                     <div class="filtreChoice">
-                                        Animaux autorisés
+                                        <a href="#">Animaux autorisés</a>
+                                        
                                     </div>
 
                                 </div>
@@ -309,7 +310,7 @@
         </section>
 
     </div>
-
+    <!--Pied page avec infos-->
     <div id="footerBlock">
         <footer>
             <div id="footerContent">
