update final modification

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
             <!-- aside avec hotels les plus populaires -->
             <aside>
-                <div id="infoPopular">
+                <div id="infoPopularTitel">
                     <h3>Les plus populaires</h3>
                     <img src="icons/chart-line-solid.svg" alt="chart-line incon">
                 </div>
